updated all files

--- a/index.html
+++ b/index.html
@@ -6,29 +6,52 @@
   </head>
 
   <body>
-    <div class="header"
+    <div class="header">
       <h1>Discover hidden places in the world around you</h1>
     </div>
 
+    <div class="download">
+      <p><a href="" style="color:Aquamarine">Download Excursion
+        (Coming soon!)</a></p>
+    </div>
 
-      <p><a href="">Download Excursion (Coming soon!)</a></p>
+    <center>
+      <video controls>
+        <source src="resources/videos/excursion.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+      </video>
+    </center>
 
+    <div class="info">
+      <h1>Your personal travel guide</h1>
+    </div>
 
-   <video>
-     <source src="resources/videos/excursion.mp4" type="video/mp4">
-   </video>
-
-   <h1>Your personal travel guide</h1>
-   <p>Excursion remembers places you like, and recommends new points of
+   <div class="excursion">
+     <p>Excursion remembers places you like, and recommends new points of
      interest around you.</p>
-  <img src="resources/images/camp.jpg">
-  <img src="resources/images/phone.png" width="64" height="108">
+   </div>
 
-  <h1>Coming Soon for iPhone and Android</h1>
-  <p><a href="">Download Excursion (Coming soon!)</a></p>
+    <div class="container">
+       <center>
+         <img src="resources/images/camp.jpg">
+         <br>
+         <br>
+         <img src="resources/images/phone.png" width="64" height="108">
+       </center>
+     </div>
 
-  <h2>© Excursion</h2>
+    <div class="info">
+      <h1>Coming Soon for iPhone and Android</h1>
+    </div>
 
+   <div class="download"
+      <p><a href="" style="color:Aquamarine">Download Excursion
+        (Coming soon!)</a></p>
+    </div>
+
+    <div class="copyright">
+      <h4>© Excursion</h4>
+    </div>
 
   </body>
 </html>
